# bufo

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  build.bufo  hello.bufo  helper.py  llvm.py  llvm_test.bufo  machine.bufo  mod.bufo  roadmap.md  small.bufo  struct_init.bufo  test.bufo  todo.py  type.bufo  variadic_bug.bufo
.cargo/: config.toml
backup/: instruction.call.txt  parser_old.txt
bootstrap/: bufo_linux.c  bufo_linux.c.clang.sh  bufo_linux.c.gcc.sh  bufo_windows.c  bufo_windows.c.cl.bat  bufo_windows.c.clang.bat
bufo2/: Makefile  ast.bufo  checker.bufo  codegen.bufo  common.bufo  corot.bufo  foo.bufo  hashmap.bufo  interp.bufo  lexer.bufo  list.bufo  lookup.bufo  main.bufo  monitor.bufo  parser.bufo  playground.bufo  test.bufo  type.bufo
ex/: argc.bufo  arr_bug.bu  array.bu  array.bufo  block.bu  class.bu  complicated.bu  easy.bu  field.bu  file.bu  file.bufo  for.bufo  import.bufo  loop.bu  many_field.bu  ptr.bufo  ref.bufo  refref.bufo  reinterpret.bufo  strukt.bufo  test.bu  test.bufo  time.bu
examples/: argc.bufo  array.bufo  assembly.bufo  file.bufo  raylib.bufo
fuzz/: fuzzer.py
how_to/: 001_functions.bufo  002_structs.bufo  003_imports.bufo  004_comptime.bufo  005_unions.bufo  006_rtti.bufo  007_multithreading.bufo  README.md
known_problems/: class_name.bu  this.bu  void_method.bu
notes/: classes.md  llvm.md  structs.md
prelude/: prelude.bu  prelude.bufo
raylib/: LICENSE.txt
src/: Flag.java  Main.java  arr_bug.bu  assembler.rs  bufo.bufo  bufo.java  checker.rs  codegen.rs  compiler.rs  (+10 more)
(+835 files in other folders)
