[package]
name = "bufo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.10", features = ["derive"]}
tracer = { path = "tracer" }
once_cell = "1.19.0"
inkwell = { package = "inkwell", version = "0.2.0", features = ["target-x86", "llvm16-0"], optional = true }

[features]
trace = []
trace_extra = []
llvm = ["inkwell"]